--- a/basic/package.json
+++ b/basic/package.json
@@ -16,6 +16,7 @@
     "apollo-link-ws": "1.0.8",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
+    "subscriptions-transport-ws": "^0.9.8",
     "vue": "2.5.16",
     "vue-apollo": "3.0.0-beta.5",
     "vue-router": "3.0.1",
