--- a/basic/server/database/prisma.yml
+++ b/basic/server/database/prisma.yml
@@ -1,9 +1,9 @@
 # the endpoint of your service (this also defines the cluster the service will be deployed to)
-endpoint: __PRISMA_ENDPOINT__
+endpoint: http://localhost:4466/vue-graphql-boilerplate/dev
 
 # to disable authentication:
 # disableAuth: true
-secret: mysecret123
+#secret: mysecret123
 
 # the file path pointing to your data model
 datamodel: datamodel.graphql
